trunk/Archive2/64/ce469c4646f091/output
main.cpp: In function 'int main()':
main.cpp:3:8: error: no match for 'operator=' (operand types are 'main()::__lambda0' and 'main()::__lambda1')
   test = []{};
        ^
main.cpp:3:8: note: candidate is:
main.cpp:2:16: note: main()::__lambda0& main()::__lambda0::operator=(const main()::__lambda0&) <deleted>
   auto test = []{};
                ^
main.cpp:2:16: note:   no known conversion for argument 1 from 'main()::__lambda1' to 'const main()::__lambda0&'
